Refactoring bottom propagation, improved assume method, abstract stack is an instance of base lattice